--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ NEXT_PUBLIC_VERSION=4.2.4
 # 非必须
 # NEXT_PUBLIC_PSEUDO_STATIC=
 # NEXT_PUBLIC_REVALIDATE_SECOND=  
-# NEXT_PUBLIC_THEME=matery
+NEXT_PUBLIC_THEME=example
 # NEXT_PUBLIC_THEME_SWITCH=
 # NEXT_PUBLIC_LANG=
 # NEXT_PUBLIC_APPEARANCE=
